# bharani-python-training

python_basic_question_moday/week-6/: README.md  main.py  test_program.py
python_basic_question_moday/week_1_sep_8/: longest_beautiful_substring.py
python_basic_question_moday/week_2/: minimum_time.py
python_basic_question_moday/week_3/: main.py
python_basic_question_moday/week_4/shortest_path_binary/: README.md  main.py  pyproject.toml  test_program.py
python_mini_task_wednesday/week-1/: database.py  events.py  exception.py  main.py  middleware.py  pyproject.toml  settings.py  utils.py
python_mini_task_wednesday/week-1/endpoints/: task.py
python_mini_task_wednesday/week-1/models/: task.py
python_mini_task_wednesday/week-1/routers/: task.py
python_mini_task_wednesday/week-1/schemas/: task.py
python_mini_task_wednesday/week-2/: index.html  style.css
python_mini_task_wednesday/week-3/todo_list-master/todo_app/: models.py  urls.py  views.py
python_mini_task_wednesday/week-3/todo_list-master/todo_app/migrations/: 0001_initial.py
python_mini_task_wednesday/week-3/todo_list-master/todo_app/templates/: base.html
python_mini_task_wednesday/week-3/todo_list-master/todo_project/: settings.py  urls.py
python_mini_task_wednesday/week-5/: QUESTION.md  README.md  cache.py  config.py  db.py  main.py  models.py  pyproject.toml  routers.py  schemas.py  test.db
python_mini_task_wednesday/week-6/: QUESTION.md
python_mini_task_wednesday/week-6/job_board_application/: pyproject.toml
(+4 files in other folders)
