[project]
name = "job_board_application"
version = "0.1.0"
description = ""
authors = [
    {name = "Bharanidharan",email = "bharanidharan@mallow-tech.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
